This file contains a brief description of Knotter releases,
showing when features have been added to the program.

Knotter 0.6.0  - Ongoing development
--------------------
* Insert polygons
* Break edges
* Customizable Toolbars
* Czech translation
* Italian translation

Knotter 0.5.0
--------------------
### NOTE ###
Knotter 0.5.0 introduces some incompatibility with old .knot files!
Old files will still be loaded but you have to adjust a few style settings

* Advanced Export Options
* Movable Grid
* User Manual
* Dockable dialogs
* Per-node settings
* New shape algorithm
* Option to enable knot caching

Knotter 0.4.0
--------------------
* Hide/show graph/knot
* Initial error recovery
* Better Flip selection
* Scale/Rotate selection
* Export bitmap
* Configuration
* Save/restore status

Knotter 0.3.0
--------------------
* Snap to Grid
* i18n setup
* Pen Style
* Better Mouse Input
* Flip selection

Knotter 0.2.0
---------------------
* Zooming
* Copy/Paste

Knotter 0.1.0
---------------------
First public release
* Basic Editing
* Open/Save
* Undo/Redo
* Style
* SVG Export