@@ -147,6 +147,7 @@ class KnotView : public QGraphicsView
 
         /// prevents next brush changes to be merged as a single undo command
         void accept_brush();
+        void accept_width();
 
         void set_cache_mode(QGraphicsItem::CacheMode cm);
     public:
