@@ -8,6 +8,7 @@ Knotter 0.6.0  - Ongoing development
 * Customizable Toolbars
 * Czech translation
 * Italian translation
+* New "Round" cusp style
 
 Knotter 0.5.0
 --------------------
